--- a/QueueIT/wwwroot/css/myStyles.css
+++ b/QueueIT/wwwroot/css/myStyles.css
@@ -145,11 +145,20 @@ button.my-btn-primary {
     border: 1px solid black;
 }
 
+button.right {
+    float: right;
+}
+
 button.my-btn-secondary {
     background-image: linear-gradient(-90deg, #ff0049, #ff6000);
     color: #ffffff;
     border: 1px solid black;
     border-radius: 1rem;
+}
+
+button.my-btn-secondary:hover {
+    outline: 0;
+    box-shadow: 0 0 0 2px #212121;
 }
 
 div.container-row {
@@ -158,9 +167,59 @@ div.container-row {
     justify-content: center;
 }
 
+div.kanban {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
 div.container-col {
     display: flex;
     flex-direction: column;
+}
+
+div.kanban-col {
+    display: flex;
+    flex-direction: column;
+    border-radius: .25rem;
+    padding: 5px 5px 5px 5px;
+    width: 22%;
+    min-height: 80px;
+    margin: 2rem 0 2rem 0;
+    background-color: #212121;
+    color: #a4a4a4;
+}
+
+div.kanban-col-header {
+    text-align: center;
+    border-bottom: 1px solid #000;
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.2;
+    padding: 0 0 5px 0;
+}
+
+div.kanban-col-item {
+    background-color: #363636;
+    margin: 4px 2px 4px 2px;
+    padding: 2px 5px 2px 5px;
+    color: #ffffff;
+    border-radius: .25rem;
+    border: 1px solid #000000;
+}
+
+div.kanban-col-footer {
+    color: #a4a4a4;
+    text-align: center;
+    margin: 4px 2px 4px 2px;
+    padding: 2px 5px 2px 5px;
+}
+
+div.kanban-col-footer:hover {
+    background-color: #363636;
+    border-radius: .25rem;
+    cursor: pointer;
 }
 
 div.home-cards {
@@ -170,6 +229,20 @@ div.home-cards {
 div.home-card {
     background-image: linear-gradient(180deg, #ff3c00, #ff0049);
     color: #FFFFFF;
+}
+
+button.home-card {
+    background-image: linear-gradient(180deg, #ff3c00, #ff0049);
+    color: #FFFFFF;
+    border: 1.5px;
+}
+
+button.home-card:hover {
+    cursor: pointer
+}
+
+button.home-card:focus {
+    border: rgba(0, 0, 0, 0.125);
 }
 
 div.p-10 {
@@ -308,10 +381,51 @@ button.create{
 }
 
 .nav:hover {
-    border-radius: 10%;
-    background-color: #424242;
+    outline: 0;
+    box-shadow: 0 0 0 2px #424242;
+    border-radius: 5%;
 }
 
+.modal-backdrop,
+.modal-backdrop.fade.in{
+    opacity: 1;
+    filter: alpha(opacity=100);
+    background: #fff;
+}
+
+.modal-header {
+    border-bottom: 1px solid #000000;
+}
+
+.modal-footer {
+    border-top: 1px solid #000000;
+}
+
+.custom-radio-group {
+    margin-left: 10px;
+}
+
+.user-home-bg {
+    background-image: url("../black-geo.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    opacity: 100%;
+}
+
+div.custom-border {
+    border-left: 2px solid #363636;
+}
+
+div.rounded {
+    border-radius: 20%;
+}
+
+img.lock {
+    height: 40px;
+    width: 40px;
+    padding: 10px 0 0 6px
+}
 
 
 
