added a kanban-col-body class

--- a/QueueIT/Views/Queues/Show.cshtml
+++ b/QueueIT/Views/Queues/Show.cshtml
@@ -8,80 +8,86 @@
     <img class="lock" src="https://img.icons8.com/ios/50/000000/lock.png" alt="">
 </div>
 <div class="kanban">
-    <div class="kanban-col">
+    <div class="kanban-col shadow">
         <div class="kanban-col-header">Todo</div>
-        <div class="kanban-col-item">
-            make top page layout button work: personal profile
-        </div>
-        <div class="kanban-col-item">
-            add to user home page layout: list of teams user is a part of
-        </div>
-        <div class="kanban-col-item">
-            add to user home page layout: list of queues user is a part of
-        </div>
-        <div class="kanban-col-item">
-            add to user home page layout: main focus
-        </div>
-        <div class="kanban-col-item">
-            create team modal logic
-        </div>
-        <div class="kanban-col-item">
-            create queue modal logic
+        <div class="kanban-col-body">
+            <div class="kanban-col-item">
+                make top page layout button work: personal profile
+            </div>
+            <div class="kanban-col-item">
+                add to user home page layout: list of teams user is a part of
+            </div>
+            <div class="kanban-col-item">
+                add to user home page layout: list of queues user is a part of
+            </div>
+            <div class="kanban-col-item">
+                add to user home page layout: main focus
+            </div>
+            <div class="kanban-col-item">
+                create team modal logic
+            </div>
+            <div class="kanban-col-item">
+                create queue modal logic
+            </div>
         </div>
         <div class="kanban-col-footer">
             <span class="thick-plus">+</span> Add Task
         </div>
     </div>
-    <div class="kanban-col">
+    <div class="kanban-col shadow">
         <div class="kanban-col-header">Doing</div>
-        <div class="kanban-col-item">
-            viewing a queue layout
+        <div class="kanban-col-body">
+            <div class="kanban-col-item">
+                viewing a queue layout
+            </div>
         </div>
     </div>
-    <div class="kanban-col">
+    <div class="kanban-col shadow">
         <div class="kanban-col-header">Done</div>
-        <div class="kanban-col-item">
-            create user homepage layout
-        </div>
-        <div class="kanban-col-item">
-            implement identity framework
-        </div>
-        <div class="kanban-col-item">
-            create landing page
-        </div>
-        <div class="kanban-col-item">
-            create register method
-        </div>
-        <div class="kanban-col-item">
-            create login method
-        </div>
-        <div class="kanban-col-item">
-            create forgot password logic
-        </div>
-        <div class="kanban-col-item">
-            create queue modal layout
-        </div>
-        <div class="kanban-col-item">
-            create team modal layout
-        </div>
-        <div class="kanban-col-item">
-            create top of page layout with nonworking buttons
-        </div>
-        <div class="kanban-col-item">
-            create email verification logic
-        </div>
-        <div class="kanban-col-item">
-            Create database
+        <div class="kanban-col-body">
+            <div class="kanban-col-item">
+                create user homepage layout
+            </div>
+            <div class="kanban-col-item">
+                implement identity framework
+            </div>
+            <div class="kanban-col-item">
+                create landing page
+            </div>
+            <div class="kanban-col-item">
+                create register method
+            </div>
+            <div class="kanban-col-item">
+                create login method
+            </div>
+            <div class="kanban-col-item">
+                create forgot password logic
+            </div>
+            <div class="kanban-col-item">
+                create queue modal layout
+            </div>
+            <div class="kanban-col-item">
+                create team modal layout
+            </div>
+            <div class="kanban-col-item">
+                create top of page layout with nonworking buttons
+            </div>
+            <div class="kanban-col-item">
+                create email verification logic
+            </div>
+            <div class="kanban-col-item">
+                Create database
+            </div>
         </div>
     </div>
-    <div class="kanban-col">
+    <div class="kanban-col shadow">
         <div class="kanban-col-header">
             Blocked
         </div>
+        <div class="kanban-col-body"></div>
         <div class="kanban-col-footer">
             <span class="thick-plus">+</span> Add Task
         </div>
-        
+
     </div>
 </div>
-
