--- a/QueueIT/wwwroot/css/myStyles.css
+++ b/QueueIT/wwwroot/css/myStyles.css
@@ -202,7 +202,12 @@ div.kanban-col-header {
 
 div.kanban-col-body {
     background-image: linear-gradient(180deg, #ff3c00, #ff0049);
+    border-radius: .25rem;
+    border: 1px solid black;
+    min-height: 30px;
 }
+
+
 
 div.kanban-col-item {
     background-color: #363636;
@@ -215,13 +220,41 @@ div.kanban-col-item {
 
 div.kanban-col-footer {
     color: #a4a4a4;
-    text-align: center;
     margin: 4px 2px 4px 2px;
     padding: 2px 5px 2px 5px;
 }
 
-div.kanban-col-footer:hover {
+input.new-task {
+    width: 98%;
     background-color: #363636;
+    border: 1px solid #000000;
+    border-radius: .25rem;
+    color: #a4a4a4;
+    margin: 4px 2px 4px 2px;
+    padding: 2px 5px 2px 5px;
+}
+
+input.new-task:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0;
+}
+
+button.close {
+}
+
+button.add-task {
+    color: #a4a4a4;
+    background-color: #212121;
+    text-align:center;
+    margin: 4px 2px 4px 2px;
+    padding: 2px 5px 2px 5px;
+    border: none;
+    width: 100%
+}
+
+button.add-task:hover {
+    background-color: #363636;
+    color: #ffffff;
     border-radius: .25rem;
     cursor: pointer;
 }
