working drag and drop

--- a/QueueIT/Views/Home/ForgotPassword.cshtml
+++ b/QueueIT/Views/Home/ForgotPassword.cshtml
@@ -4,19 +4,32 @@
     ViewBag.Title = "title";
     Layout = "_Layout";
 }
-
-<div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
-        <h1 class="text-center">Login</h1>
-        <form asp-action="ForgotPassword" method="post" class="form-horizontal">
-            <div class="form-group">
-                <label asp-for="Email" class="col-sm-2"></label>
-                <div class="col-sm-10">
-                    <input asp-for="Email" class="form-control"/>
+<br/><br/><br/><br/><br/>
+<div align="center">
+    <div style="width: 75%">
+        <div class="rounded shadow-lg background-light-grey">
+            <br/>
+            <h4 class="text-center primary-text display-6">Reset Your QueueIT Password</h4>
+            <form asp-action="ForgotPassword" method="post" class="form-horizontal">
+                <div align="center">
+                    <div style="width: 50%">
+                        <div align="left">
+                            <div>
+                                <div class="form-group">
+                                    <label asp-for="Email" class="secondary-text"></label>
+                                    <div>
+                                        <input asp-for="Email" class="form-control" placeholder="Enter email"/>
+                                    </div>
+                                    <small>Enter your email and we'll send you a link to reset your password.</small>
+                                </div>
+                                <button class="my-btn my-btn-primary">Submit</button>
+                            </div>
+                            <br/><br/>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <button class="btn btn-primary">Submit</button>
-            <div asp-validation-summary="All"></div>
-        </form>
+                <div class="errors" asp-validation-summary="All"></div>
+            </form>
+        </div>
     </div>
 </div>
