--- a/QueueIT/Views/Account/UserHome.cshtml
+++ b/QueueIT/Views/Account/UserHome.cshtml
@@ -17,7 +17,7 @@
                 </h4>
                 <span class="primary-text">Morningside</span><br/>
                 <span class="primary-text hoverable">RT</span><br/>
-                <button class="my-btn my-btn-secondary" data-toggle="modal" data-target="#CreateTeamModal" aria-hidden="true">
+                <button class="my-btn my-btn-secondary grow-secondary" data-toggle="modal" data-target="#CreateTeamModal" aria-hidden="true">
                     <span class="thick-plus">+</span> Create Team
                 </button>
             </div>
@@ -30,7 +30,7 @@
                     <span class="primary-text">Bucket List</span><br/>
                     <span class="primary-text">QueueIt</span><br/>
                     <span class="primary-text">Dingus</span><br/>
-                    <button class="my-btn my-btn-secondary" data-toggle="modal" data-target="#CreateQueueModal" aria-hidden="true">
+                    <button class="my-btn my-btn-secondary grow-secondary" data-toggle="modal" data-target="#CreateQueueModal" aria-hidden="true">
                         <span class="thick-plus">+</span> Create Queue
                     </button>
                 </div>
@@ -43,10 +43,10 @@
                     <h4 class="display-8 primary-text m-10">Personal</h4>
                     <div class="container-row home-cards">
                         <div class="card m-10">
-                            <div class="card-body home-card shadow-lg">Dingus</div>
+                            <div class="card-body home-card grow shadow-lg">Dingus</div>
                         </div>
                         <div class="card m-10">
-                            <button class="card-body home-card shadow-lg" data-toggle="modal" data-target="#CreateQueueModal" aria-hidden="true">
+                            <button class="card-body home-card grow shadow-lg" data-toggle="modal" data-target="#CreateQueueModal" aria-hidden="true">
                                 <span class="thick-plus">+</span> Add a Queue
                             </button>
                         </div>
@@ -56,13 +56,13 @@
                     <h4 class="display-8 primary-text m-10">Morningside</h4>
                     <div class="container-row home-cards">
                         <div class="card m-10">
-                            <div class="card-body home-card shadow-lg">Bucket List</div>
+                            <div class="card-body home-card grow shadow-lg"><a class="trans-link" asp-controller="Queues" asp-action="Show">Bucket List</a></div>
                         </div>
                         <div class="card m-10">
-                            <div class="card-body home-card shadow-lg">QueueIt</div>
+                            <div class="card-body home-card grow shadow-lg">QueueIt</div>
                         </div>
                         <div class="card m-10">
-                            <button class="card-body home-card shadow-lg" data-toggle="modal" data-target="#CreateQueueModal" aria-hidden="true">
+                            <button class="card-body home-card grow shadow-lg" data-toggle="modal" data-target="#CreateQueueModal" aria-hidden="true">
                                 <span class="thick-plus">+</span> Add a Queue
                             </button>
                         </div>
@@ -72,7 +72,7 @@
                     <h4 class="display-8 primary-text m-10">RT</h4>
                     <div class="container-row home-cards">
                         <div class="card m-10">
-                            <button class="card-body home-card shadow-lg" data-toggle="modal" data-target="#CreateQueueModal" aria-hidden="true">
+                            <button class="card-body home-card grow shadow-lg" data-toggle="modal" data-target="#CreateQueueModal" aria-hidden="true">
                                 <span class="thick-plus">+</span> Add a Queue
                             </button>
                         </div>
