--- a/QueueIT/Views/Queues/Show.cshtml
+++ b/QueueIT/Views/Queues/Show.cshtml
@@ -1,4 +1,3 @@
-@using System.Reflection.Metadata
 @{
     ViewBag.Title = "title";
     Layout = "_LoggedInLayout";
@@ -12,8 +11,8 @@
     <div class="kanban-col shadow" id="todo-col">
         <div class="kanban-col-header">Todo</div>
         <div class="kanban-col-body" id="todo-body">
-            <div class="kanban-col-item drag shadow-sm">DRAG ME</div>
-            <div class="kanban-col-item drag shadow-sm">DRAG ME TOO</div>
+            <div class="kanban-col-item drag">DRAG ME</div>
+            <div class="kanban-col-item drag">DRAG ME TOO</div>
         </div>
         <div class="kanban-col-footer" id="todo-footer">
             <button class="add-task" id="add-task" onclick="addTask()">
@@ -47,120 +46,88 @@
         </div>
     </div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
 
-<script type="text/javascript">
-    function addTask() {
-        // grab elements
-        var addTaskBtn = document.getElementById('add-task');
-        var createTaskBtn = document.getElementById('create-task');
-        var footer = document.getElementById('todo-footer');
-        var closeBtn = document.getElementById('close-btn');
 
-        // hide add task btn
-        addTaskBtn.hidden = true;
+@section Scripts {
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        function addTask() {
+            // grab elements
+            var addTaskBtn = document.getElementById('add-task');
+            var createTaskBtn = document.getElementById('create-task');
+            var footer = document.getElementById('todo-footer');
+            var closeBtn = document.getElementById('close-btn');
 
-        // add an input field
-        var input = document.createElement('input');
-        input.id = 'new-task';
-        input.placeholder = "Enter a title for this task";
-        input.classList.add('new-task');
-        footer.insertBefore(input, footer.childNodes[0]);
-        input.focus();
+            // hide add task btn
+            addTaskBtn.hidden = true;
 
-        // reveal hidden buttons
-        createTaskBtn.hidden = false;
-        closeBtn.hidden = false;
-    }
+            // add an input field
+            var input = document.createElement('input');
+            input.id = 'new-task';
+            input.placeholder = "Enter a title for this task";
+            input.classList.add('new-task');
+            footer.insertBefore(input, footer.childNodes[0]);
+            input.focus();
 
-    function cancelTask() {
-        // grab elements 
-        var addTaskBtn = document.getElementById('add-task');
-        var createTaskBtn = document.getElementById('create-task');
-        var closeBtn = document.getElementById('close-btn');
-        var footer = document.getElementById('todo-footer');
-        var newTask = document.getElementById('new-task');
-
-        // hide and reveal buttons
-        closeBtn.hidden = true;
-        createTaskBtn.hidden = true;
-        addTaskBtn.hidden = false;
-
-        // remove the new text field
-        footer.removeChild(newTask);
-    }
-
-    function createTask() {
-        // grab elements 
-        var body = document.getElementById('todo-body');
-        var newTask = document.getElementById('new-task');
-        if (newTask.value !== "") {
-            // create new kanban item
-            var newTaskDiv = $('<div class="drag kanban-col-item">' + newTask.value + '</div>');
-            $(newTaskDiv).draggable();
-            $('#todo-body').append(newTaskDiv);
-            console.dir($('.drag'));
-            newTask.value = "";
-        }       
-    }
-
-    $("#todo-footer").keyup(function(event) {
-        switch (event.keyCode) {
-        case 13:
-            createTask();
-            break;
-        case 27:
-            cancelTask();
-            break;
-        default:
-            break;
+            // reveal hidden buttons
+            createTaskBtn.hidden = false;
+            closeBtn.hidden = false;
         }
-    });
 
-    $('.drag').draggable();
+        function cancelTask() {
+            // grab elements 
+            var addTaskBtn = document.getElementById('add-task');
+            var createTaskBtn = document.getElementById('create-task');
+            var closeBtn = document.getElementById('close-btn');
+            var footer = document.getElementById('todo-footer');
+            var newTask = document.getElementById('new-task');
 
-    $(".kanban-col-body").droppable({
-        accept: ".drag",
-        drop: function(event, ui) {
-            var droppable = $(this);
-            var draggable = ui.draggable;
-            // move draggable into droppable
-            draggable.appendTo(droppable);
-            draggable.css({top: '0px', left: '0px'});
+            // hide and reveal buttons
+            closeBtn.hidden = true;
+            createTaskBtn.hidden = true;
+            addTaskBtn.hidden = false;
+
+            // remove the new text field
+            footer.removeChild(newTask);
         }
-    });
-    
-    $("#doing-body").droppable({
-        accept: ".drag",
-        drop: function(event, ui) {
-            var droppable = $(this);
-            var draggable = ui.draggable;
-            // move draggable into droppable
-            draggable.appendTo(droppable);
-            draggable.css({top: '0px', left: '0px'});
+
+        function createTask() {
+            // grab elements 
+            var newTask = document.getElementById('new-task');
+            if (newTask.value !== "") {
+                // create new kanban item
+                var $newTaskDiv = $('<div class="drag kanban-col-item">' + newTask.value + '</div>');
+                $('#todo-body').append($newTaskDiv);
+                $newTaskDiv.draggable();
+                newTask.value = "";
+            }
         }
-    });
-    
-    $("#todo-body").droppable({
-        accept: ".drag",
-        drop: function(event, ui) {
-            var droppable = $(this);
-            var draggable = ui.draggable;
-            // move draggable into droppable
-            draggable.appendTo(droppable);
-            draggable.css({top: '0px', left: '0px'});
-        }
-    });
-    
-    $("#done-body").droppable({
-        accept: ".drag",
-        drop: function(event, ui) {
-            var droppable = $(this);
-            var draggable = ui.draggable;
-            // move draggable into droppable
-            draggable.appendTo(droppable);
-            draggable.css({top: '0px', left: '0px'});
-        }
-    });
-</script>
+
+        $("#todo-footer").keyup(function(event) {
+            switch (event.keyCode) {
+            case 13:
+                createTask();
+                break;
+            case 27:
+                cancelTask();
+                break;
+            default:
+                break;
+            }
+        });
+
+        $('.drag').draggable();
+
+        $(".kanban-col-body").droppable({
+            accept: ".drag",
+            drop: function(event, ui) {
+                var droppable = $(this);
+                var draggable = ui.draggable;
+                // move draggable into droppable
+                draggable.appendTo(droppable);
+                draggable.css({ top: '0px', left: '0px' });
+            }
+        });
+    </script>
+
+}
